Bug 327178 - Cannot disable extra PPA's under "Sources tab"
Summary: Cannot disable extra PPA's under "Sources tab"
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 305354 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-11-05 16:20 UTC by Rohan Garg
Modified: 2016-10-03 15:28 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rohan Garg 2013-11-05 16:20:23 UTC
Cannot tick and untick extra PPA's under "Sources tab"

Reproducible: Always

Steps to Reproduce:
1. Add PPA
2. Open Sources Tab in discover
3. Try and disable the PPA by unticking the checkbox next to it
Actual Results:  
Nothing happens, cannot disable the PPA

Expected Results:  
PPA is disabled
Comment 1 Jonathan Riddell 2013-11-05 16:36:42 UTC
I agree, the tickbox widgets are not enabled.
Comment 2 Jonathan Riddell 2013-11-05 16:37:00 UTC
This is self compiled from git branch 2.1
Comment 3 Aleix Pol 2014-01-14 00:42:58 UTC
Yes, that's true. This will be hopefully fixed soon with some additional API that is being introduced in QApt.
Comment 4 Aleix Pol 2014-01-14 01:02:04 UTC
*** Bug 305354 has been marked as a duplicate of this bug. ***
Comment 5 Aleix Pol 2016-10-03 15:28:45 UTC
Git commit 4b193e0d72e7e33df8b7424a14c74a13764f8190 by Aleix Pol.
Committed on 03/10/2016 at 15:28.
Pushed by apol into branch 'Plasma/5.8'.

Allow PackageKit enable/disable sources

M  +4    -1    discover/qml/SourcesPage.qml
M  +46   -8    libdiscover/backends/PackageKitBackend/PackageKitSourcesBackend.cpp
M  +5    -3    libdiscover/backends/PackageKitBackend/PackageKitSourcesBackend.h

http://commits.kde.org/discover/4b193e0d72e7e33df8b7424a14c74a13764f8190