Allow PackageKit enable/disable sources

BUG: 327178